feat: support compatible Raft rolling upgrades with safe draining
